1.3 - Configuration begins!
- NOTE: Removed plugin.yml and other files that were included into OpC (from now on OpC is not a standalone lib, and cannot be placed in /plugins directory)
- Added Configuration system which allows you to easily save / get configuration objects and create your own,
- Added OpText.java, so you can use its configuration methods,
- Moved classes to their own packages,